update tracker
