# src/domains/trackers/router.js
@@ -12,7 +12,7 @@ router.post('/', create_one)
 
 router.get('/', get_list)
 
-router.get('/user/:user_id', get_list_by_user)
+router.get('/user', get_list_by_user)
 
 router.put('/:id', update_one)
 
